[tool.poetry]
name = "my-package-pythonlearning"
version = "0.1.0"
description = ""
authors = ["Veera Chunduri <vchundur@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
